Modified SBT launcher bat file so it can load a config file with default settings.